--- a/Views/Books/Index.cshtml
+++ b/Views/Books/Index.cshtml
@@ -5,9 +5,9 @@
 <div class="text-center">
     <h1 class="display-4">How can I help you today?</h1>
     <ul>
-        <li><a asp-area="" asp-controller="Books" asp-action="ViewAll">View books</a></li>
-        <li><a asp-area="" asp-controller="Books" asp-action="Register">Register a book</a></li>
-        <li>Update a book's details</li>
-        <li>Unregister a book</li>
+        <li><a asp-area="" asp-controller="Books" asp-action="ViewAll">View all books in the catalogue</a></li>
+        <li><a asp-area="" asp-controller="Books" asp-action="Register">Register a new book</a></li>
+        <li><a asp-area="" asp-controller="Books" asp-action="Update">Update the book details or create a new copy</a></li>
+        <li><a asp-area="" asp-controller="Books" asp-action="Unregister">Unregister a book</a></li>
     </ul>
 </div>
